_deploy/kustomize/overlays/dev/deployment.yaml
---
# API SERVICE DEPLOYMENT PATCH
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service-api
spec:
  template:
    spec:
      containers:
      - name: app
        image: profile-service-api-img
      tolerations:
        - key: kubernetes.azure.com/scalesetpriority
          operator: Equal
          value: spot
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.azure.com/scalesetpriority
                    operator: In
                    values:
                      - spot
