_deploy/kustomize/overlays/dev/mssql-statefulset.yaml
---
# MSSQL STATEFULSET PATCH
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: profile-service-api
spec:
  template:
    spec:
      tolerations:
        - key: kubernetes.azure.com/scalesetpriority
          operator: Equal
          value: spot
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.azure.com/scalesetpriority
                    operator: In
                    values:
                      - spot
